--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -309,7 +309,7 @@ Alternatively if you want to just have a single hero
         </div>
 
     </section>
-    <div th:include="~{/comm/footer}"></div>
+    <div th:replace="~{/comm/footer}"></div>
 
 </body>
 
