--- a/src/main/resources/templates/comm/header.html
+++ b/src/main/resources/templates/comm/header.html
@@ -1,11 +1,12 @@
+<!-- header.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
+    <title>Tailwind Starter Template - Nordic Shop: Tailwind Toolbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tailwind Starter Template - Nordic Shop: Tailwind Toolbox</title>
     <meta name="description" content="Free open source Tailwind CSS Store template">
     <meta name="keywords" content="tailwind,tailwindcss,tailwind css,css,starter template,free template,store template, shop layout, minimal, monochrome, minimalistic, theme, nordic">
 
@@ -22,7 +23,6 @@
             display: block;
         }
     </style>
-
 </head>
 
 <body class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal">
