--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 
 <head>
     <meta charset="UTF-8">
@@ -46,10 +47,10 @@
         <div class="loginbottommargin flex fle-col items-center justify-center py-6 px-4">
             <div class="items-center gap-4 max-w-2xl w-full">
 
-                    <form class="space-y-4">
+                    <form action="/secure/login_exe" method="post" class="space-y-4">
 
                         <div>
-                            <label class="text-gray-800 text-sm mb-2 block">Email</label>
+                            <label th:text="${message}" class="text-gray-800 text-sm mb-2 block">Email</label>
                             <div class="relative flex items-center">
                                 <input name="username" type="text" required class="w-full text-sm text-gray-800 border border-gray-300 px-4 py-3 rounded-lg outline-blue-600" placeholder="Enter email" />
 
@@ -79,7 +80,7 @@
                         </div>
 
                         <div class="!mt-8">
-                            <button type="button" class="w-full shadow-xl py-3 px-4 text-sm font-semibold tracking-wide rounded-lg text-white bg-gray-600 hover:bg-gray-700 focus:outline-none">
+                            <button type="submit" class="w-full shadow-xl py-3 px-4 text-sm font-semibold tracking-wide rounded-lg text-white bg-gray-600 hover:bg-gray-700 focus:outline-none">
                                 Log in
                             </button>
                         </div>
