--- a/src/main/resources/templates/product/productlist.html
+++ b/src/main/resources/templates/product/productlist.html
@@ -66,8 +66,8 @@
 
             <th:block th:each="product : ${productsList}">
                 <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                    <a href="#">
-                        <img class="hover:grow hover:shadow-lg" src="https://images.unsplash.com/photo-1555982105-d25af4182e4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&h=400&q=80">
+                    <a th:href="@{/products/{id}(id=${product.getProductId()})}">
+                        <img class="hover:grow hover:shadow-lg" th:src="${product.getImg()}">
                         <div class="pt-3 flex items-center justify-between">
                             <p th:text="${product.getName()}"></p>
                             <svg class="h-6 w-6 fill-current text-gray-500 hover:text-black" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
