--- a/src/main/resources/templates/product/productview.html
+++ b/src/main/resources/templates/product/productview.html
@@ -26,10 +26,6 @@
             margin-bottom: 160px;
         }
 
-        .productviesmargin2 {
-            margin-top: 30px;
-        }
-
     </style>
 
 
@@ -37,163 +33,134 @@
 </head>
 
 <body class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal">
-    <div th:include="~{/comm/header}"></div>
-    <section class="bg-white py-8">
+<div th:include="~{/comm/header}"></div>
+<section class="bg-white py-8">
+    <div class="container mx-auto flex items-center flex-wrap pt-4 pb-12">
+        <nav id="store" class="w-full z-30 top-0 px-6 py-1">
+            <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-2 py-3">
+                <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl " href="#">
+                    Product
+                </a>
+            </div>
 
-        <div class="container mx-auto flex items-center flex-wrap pt-4 pb-12">
-            <nav id="store" class="w-full z-30 top-0 px-6 py-1">
-                <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 px-2 py-3">
+            <div class="font-sans p-8 tracking-wide max-lg:max-w-2xl mx-auto">
+                <div class="grid items-start grid-cols-1 lg:grid-cols-2 gap-10">
+                    <div class="space-y-4 text-center top-8">
+                        <div class="bg-gray-100 p-4 flex items-center sm:h-[380px] rounded-lg">
+                            <img th:src="${product.img}" alt="Product" class="w-full max-h-full object-contain object-top" />
+                        </div>
+                    </div>
 
-                    <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl " href="#">
-                        Product
-                    </a>
-                </div>
-
-                <div class="font-sans p-8 tracking-wide max-lg:max-w-2xl mx-auto">
-                    <div class="grid items-start grid-cols-1 lg:grid-cols-2 gap-10">
-                        <div class="space-y-4 text-center top-8">
-                            <div class="bg-gray-100 p-4 flex items-center sm:h-[380px] rounded-lg">
-                                <img th:src="${product.getImg()}" alt="Product" class="w-full max-h-full object-contain object-top" />
-                            </div>
-
+                    <div class="max-w-xl">
+                        <div>
+                            <h2 th:text="${product.name}" class="text-2xl font-extrabold text-gray-800"></h2>
+                            <p th:text="${product.categories.name}" class="text-sm text-gray-600 mt-2">Well-Versed Commerce</p>
                         </div>
 
-                        <div class="max-w-xl">
-                            <div>
-                                <h2 th:text="${product.getName()}" class="text-2xl font-extrabold text-gray-800"></h2>
-                                <p th:text="${product.getCategories().getName()}" class="text-sm text-gray-600 mt-2">Well-Versed Commerce</p>
-                            </div>
+                        <div class="flex space-x-1 mt-4">
+                            <button type="button" class="px-2.5 py-1.5 bg-gray-100 text-xs text-gray-800 rounded-lg flex items-center !ml-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-3 mr-1" fill="currentColor" viewBox="0 0 32 32">
+                                    <path d="M14.236 21.954h-3.6c-.91 0-1.65-.74-1.65-1.65v-7.201c0-.91.74-1.65 1.65-1.65h3.6a.75.75 0 0 1 .75.75v9.001a.75.75 0 0 1-.75.75zm-3.6-9.001a.15.15 0 0 0-.15.15v7.2a.15.15 0 0 0 .15.151h2.85v-7.501z" data-original="#000000" />
+                                    <path d="M20.52 21.954h-6.284a.75.75 0 0 1-.75-.75v-9.001c0-.257.132-.495.348-.633.017-.011 1.717-1.118 2.037-3.25.18-1.184 1.118-2.089 2.28-2.201a2.557 2.557 0 0 1 2.17.868c.489.56.71 1.305.609 2.042a9.468 9.468 0 0 1-.678 2.424h.943a2.56 2.56 0 0 1 1.918.862c.483.547.708 1.279.617 2.006l-.675 5.401a2.565 2.565 0 0 1-2.535 2.232zm-5.534-1.5h5.533a1.06 1.06 0 0 0 1.048-.922l.675-5.397a1.046 1.046 0 0 0-1.047-1.182h-2.16a.751.751 0 0 1-.648-1.13 8.147 8.147 0 0 0 1.057-3 1.059 1.059 0 0 0-.254-.852 1.057 1.057 0 0 0-.795-.365c-.577.052-.964.435-1.04.938-.326 2.163-1.71 3.507-2.369 4.036v7.874z" data-original="#000000" />
+                                    <path d="M4 31.75a.75.75 0 0 1-.612-1.184c1.014-1.428 1.643-2.999 1.869-4.667.032-.241.055-.485.07-.719A14.701 14.701 0 0 1 1.25 15C1.25 6.867 7.867.25 16 .25S30.75 6.867 30.75 15 24.133 29.75 16 29.75a14.57 14.57 0 0 1-5.594-1.101c-2.179 2.045-4.61 2.81-6.281 3.09A.774.774 0 0 1 4 31.75zm12-30C8.694 1.75 2.75 7.694 2.75 15c0 3.52 1.375 6.845 3.872 9.362a.75.75 0 0 1 .217.55c-.01.373-.042.78-.095 1.186A11.715 11.715 0 0 1 5.58 29.83a10.387 10.387 0 0 0 3.898-2.37l.231-.23a.75.75 0 0 1 .84-.153A13.072 13.072 0 0 0 16 28.25c7.306 0 13.25-5.944 13.25-13.25S23.306 1.75 16 1.75z" data-original="#000000" />
+                                </svg>
+                                87 Reviews
+                            </button>
+                        </div>
 
-                            <div class="flex space-x-1 mt-4">
+                        <div class="mt-4">
+                            <h3 th:text="${formattedPrice}" class="text-gray-800 text-4xl font-bold"></h3>
+                        </div>
 
-                                <button type="button" class="px-2.5 py-1.5 bg-gray-100 text-xs text-gray-800 rounded-lg flex items-center !ml-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-3 mr-1" fill="currentColor" viewBox="0 0 32 32">
-                                        <path d="M14.236 21.954h-3.6c-.91 0-1.65-.74-1.65-1.65v-7.201c0-.91.74-1.65 1.65-1.65h3.6a.75.75 0 0 1 .75.75v9.001a.75.75 0 0 1-.75.75zm-3.6-9.001a.15.15 0 0 0-.15.15v7.2a.15.15 0 0 0 .15.151h2.85v-7.501z" data-original="#000000" />
-                                        <path d="M20.52 21.954h-6.284a.75.75 0 0 1-.75-.75v-9.001c0-.257.132-.495.348-.633.017-.011 1.717-1.118 2.037-3.25.18-1.184 1.118-2.089 2.28-2.201a2.557 2.557 0 0 1 2.17.868c.489.56.71 1.305.609 2.042a9.468 9.468 0 0 1-.678 2.424h.943a2.56 2.56 0 0 1 1.918.862c.483.547.708 1.279.617 2.006l-.675 5.401a2.565 2.565 0 0 1-2.535 2.232zm-5.534-1.5h5.533a1.06 1.06 0 0 0 1.048-.922l.675-5.397a1.046 1.046 0 0 0-1.047-1.182h-2.16a.751.751 0 0 1-.648-1.13 8.147 8.147 0 0 0 1.057-3 1.059 1.059 0 0 0-.254-.852 1.057 1.057 0 0 0-.795-.365c-.577.052-.964.435-1.04.938-.326 2.163-1.71 3.507-2.369 4.036v7.874z" data-original="#000000" />
-                                        <path d="M4 31.75a.75.75 0 0 1-.612-1.184c1.014-1.428 1.643-2.999 1.869-4.667.032-.241.055-.485.07-.719A14.701 14.701 0 0 1 1.25 15C1.25 6.867 7.867.25 16 .25S30.75 6.867 30.75 15 24.133 29.75 16 29.75a14.57 14.57 0 0 1-5.594-1.101c-2.179 2.045-4.61 2.81-6.281 3.09A.774.774 0 0 1 4 31.75zm12-30C8.694 1.75 2.75 7.694 2.75 15c0 3.52 1.375 6.845 3.872 9.362a.75.75 0 0 1 .217.55c-.01.373-.042.78-.095 1.186A11.715 11.715 0 0 1 5.58 29.83a10.387 10.387 0 0 0 3.898-2.37l.231-.23a.75.75 0 0 1 .84-.153A13.072 13.072 0 0 0 16 28.25c7.306 0 13.25-5.944 13.25-13.25S23.306 1.75 16 1.75z" data-original="#000000" />
-                                    </svg>
-                                    87 Reviews
-                                </button>
-                            </div>
+                        <div class="flex flex-wrap gap-4 mt-8">
+                            <button type="button" class="min-w-[200px] px-4 py-3 bg-gray-400 hover:bg-gray-500 text-white text-sm font-semibold rounded-lg">Buy now</button>
+                            <button id="addToCartButton" th:data-product-id="${product.productId}" type="button" class="min-w-[200px] px-4 py-2.5 border border-gray-400 bg-transparent hover:bg-gray-50 text-gray-800 text-sm font-semibold rounded-lg">Add to cart</button>
+                        </div>
 
-                            <div class="mt-4">
-                                <h3 th:text="${formattedPrice}" class="text-gray-800 text-4xl font-bold"></h3>
-                            </div>
-
-
-
-                            <div class="flex flex-wrap gap-4 mt-8">
-                                <button type="button" class="min-w-[200px] px-4 py-3 bg-gray-400 hover:bg-gray-500 text-white text-sm font-semibold rounded-lg">Buy now</button>
-                                <button id="addToCartButton" th:data-product-id="${product.getProductId()}" type="button" class="min-w-[200px] px-4 py-2.5 border border-gray-400 bg-transparent hover:bg-gray-50 text-gray-800 text-sm font-semibold rounded-lg">Add to cart</button>
-                            </div>
+                        <div class="mt-8">
+                            <ul class="flex border-b">
+                                <li class="text-gray-800 font-bold text-sm bg-gray-100 py-3 px-8 border-b-2 border-gray-400 cursor-pointer transition-all">
+                                    Description
+                                </li>
+                            </ul>
 
                             <div class="mt-8">
-                                <ul class="flex border-b">
-                                    <li
-                                        class="text-gray-800 font-bold text-sm bg-gray-100 py-3 px-8 border-b-2 border-gray-400 cursor-pointer transition-all">
-                                        Description</li>
-
-                                </ul>
-
-                                <div class="mt-8">
-                                    <h3 class="text-lg font-bold text-gray-800"></h3>
-                                    <p th:text="${product.getDescription()}"class="text-sm text-gray-600 mt-4"></p>
-                                </div>
-
+                                <h3 class="text-lg font-bold text-gray-800"></h3>
+                                <p th:text="${product.description}" class="text-sm text-gray-600 mt-4"></p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </nav>
-        </div>
-
-    </section>
-
-
-
-    <div class="productviesmargin bg-gray-50 sm:px-6 px-4 py-10 font-[sans-serif]">
-        <div class="max-w-7xl mx-auto">
-            <div class="text-center">
-                <h2 class="text-3xl font-extrabold text-[#333] inline-block">Reviews</h2>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 mt-16 max-md:max-w-lg mx-auto">
-                <div class="cursor-pointer rounded overflow-hidden group">
-                    <div>
-                        <span class="text-sm block text-gray-400 mb-2">10 FEB 2023</span>
-                        <h3 class="text-xl font-bold text-[#333] group-hover:text-blue-500 transition-all">A Guide to Igniting Your Imagination</h3>
-                        <div class="mt-4">
-                            <p class="text-gray-400 text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan, nunc et tempus blandit, metus mi consectetur felis turpis vitae ligula.</p>
-                        </div>
-                    </div>
-                    <hr class="my-6" />
-                    <div class="flex flex-wrap items-center gap-3">
-                        <p class="text-xs text-gray-400">BY JOHN DOE</p>
-                    </div>
-                </div>
-                <div class="cursor-pointer rounded overflow-hidden group">
-                    <div>
-                        <span class="text-sm block text-gray-400 mb-2">7 JUN 2023</span>
-                        <h3 class="text-xl font-bold text-[#333] group-hover:text-blue-500 transition-all">Hacks to Supercharge Your Day</h3>
-                        <div class="mt-4">
-                            <p class="text-gray-400 text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan, nunc et tempus blandit, metus mi consectetur felis turpis vitae ligula.</p>
-                        </div>
-                    </div>
-                    <hr class="my-6" />
-                    <div class="flex flex-wrap items-center gap-3">
-                        <p class="text-xs text-gray-400">BY MARK ADAIR</p>
-                    </div>
-                </div>
-                <div class="cursor-pointer rounded overflow-hidden group">
-                    <div>
-                        <span class="text-sm block text-gray-400 mb-2">5 OCT 2023</span>
-                        <h3 class="text-xl font-bold text-[#333] group-hover:text-blue-500 transition-all">Trends and Predictions</h3>
-                        <div class="mt-4">
-                            <p class="text-gray-400 text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan, nunc et tempus blandit, metus mi consectetur felis turpis vitae ligula.</p>
-                        </div>
-                    </div>
-                    <hr class="my-6" />
-                    <div class="flex flex-wrap items-center gap-3">
-                        <p class="text-xs text-gray-400">BY SIMON KONECKI</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="text-center productviesmargin2">
-                <button type="button" class="px-6 py-3 text-white text-sm bg-gray-400 mt-6 hover:bg-gray-500 text-white text-sm font-semibold text-center items-center rounded">Read more </button>
-            </div>
-
-        </div>
-
-
-        </div>
-
+        </nav>
     </div>
+</section>
 
-    <div th:replace="~{/comm/footer}"></div>
+<div class="productviesmargin bg-gray-50 sm:px-6 px-4 py-10 font-[sans-serif]">
+    <div class="max-w-7xl mx-auto">
+        <div class="text-center">
+            <h2 class="text-3xl font-extrabold text-[#333] inline-block">Reviews</h2>
+        </div>
 
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 mt-16 max-md:max-w-lg mx-auto">
+            <div th:each="review : ${reviewList}" class="cursor-pointer rounded overflow-hidden group">
+                <div>
+<!--                    <span class="text-sm block text-gray-400 mb-2" th:text="${#dates.format(review.createdAt, 'dd MMM yyyy')}"></span>-->
+                    <h3 class="text-xl font-bold text-[#333] group-hover:text-blue-500 transition-all" th:text="${review.getTitle()}">A Guide to Igniting Your Imagination</h3>
+                    <div class="mt-4">
+                        <p class="text-gray-400 text-sm" th:text="${review.getComment()}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan, nunc et tempus blandit, metus mi consectetur felis turpis vitae ligula.</p>
+                    </div>
+                </div>
+                <hr class="my-6" />
+                <div class="flex flex-wrap items-center gap-3">
+                    <p class="text-xs text-gray-400" th:text="'BY ' + ${review.getUsers().getUsername()}">BY JOHN DOE</p>
+                </div>
+            </div>
+        </div>
 
-    <script>
-        document.getElementById('addToCartButton').addEventListener('click', function() {
-            var productId = this.getAttribute('data-product-id');
+        <div class="flex flex-col items-center">
+            <div class="inline-flex mt-2 xs:mt-0">
+                <a th:if="${currentPage != null and currentPage > 0}"
+                   th:href="@{/products/{id}(id = ${product.getProductId()},page=${currentPage - 1})}"
+                   class="flex items-center justify-center px-4 h-10 text-base font-medium text-white text-sm bg-gray-500 mt-6 hover:bg-gray-600 text-white text-sm font-semibold text-center items-center">
+                    Prev
+                </a>
+                <a th:if="${currentPage != null and totalPages != null and currentPage + 1 < totalPages}"
+                   th:href="@{/products/{id}(id = ${product.getProductId()},page=${currentPage + 1})}"
+                   class="flex items-center justify-center px-4 h-10 text-base font-medium text-white text-sm bg-gray-500 mt-6 hover:bg-gray-600 text-white text-sm font-semibold text-center items-center">
+                    Next
+                </a>
+<!--                th:href="@{'/products/' + ${review.getProducts.getProductId()} + '?page=' + (${currentPage + 1})}"-->
 
-            fetch('/api/shopping-cart/add', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: new URLSearchParams({
-                    'productId': productId
-                })
+            </div>
+        </div>
+    </div>
+</div>
+
+<div th:replace="~{/comm/footer}"></div>
+
+<script>
+    document.getElementById('addToCartButton').addEventListener('click', function() {
+        var productId = this.getAttribute('data-product-id');
+
+        fetch('/api/shopping-cart/add', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded',
+            },
+            body: new URLSearchParams({
+                'productId': productId
             })
-                .then(response => response.text())
-                .then(data => {
-                    alert(data); // 성공 메시지 출력
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-        });
-    </script>
+        })
+            .then(response => response.text())
+            .then(data => {
+                alert(data); // 성공 메시지 출력
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    });
+</script>
 
 </body>
 
