feat: 로그인시 링크이동 변경

--- a/src/main/resources/templates/comm/header.html
+++ b/src/main/resources/templates/comm/header.html
@@ -57,7 +57,7 @@
 
         <div class="order-2 md:order-3 flex items-center" id="nav-content">
 
-            <a class="inline-block no-underline hover:text-black" th:href="@{/secure/login}">
+            <a class="inline-block no-underline hover:text-black" href="#" onclick="handleLinkClick(event, '/mypage', '/secure/login')">
                 <svg class="fill-current hover:text-black" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <circle fill="none" cx="12" cy="7" r="3" />
                     <path d="M12 2C9.243 2 7 4.243 7 7s2.243 5 5 5 5-2.243 5-5S14.757 2 12 2zM12 10c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3S13.654 10 12 10zM21 21v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h2v-1c0-2.757 2.243-5 5-5h4c2.757 0 5 2.243 5 5v1H21z" />
@@ -75,6 +75,23 @@
         </div>
     </div>
 </nav>
+<script>
+    function handleLinkClick(event, loggedInHref, loggedOutHref) {
+        event.preventDefault(); // 링크의 기본 동작을 막음
+
+        fetch('/comm/sessionInfo')
+            .then(response => response.text())
+            .then(sessionInfo => {
+                // 세션 정보에서 특정 키가 있는지 확인
+                if (sessionInfo.includes('ss_member_id')) {
+                    window.location.href = loggedInHref;
+                } else {
+                    window.location.href = loggedOutHref;
+                }
+            })
+            .catch(error => console.error('Error checking session:', error));
+    }
+</script>
 </body>
 
 </html>
