--- a/src/main/resources/templates/login/signup.html
+++ b/src/main/resources/templates/login/signup.html
@@ -70,11 +70,38 @@
                                 <label class="text-sm mb-2 block">비밀번호 확인</label>
                                 <input name="passwordcheck" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="비밀번호를 입력하세요" />
                             </div>
+
+                            <div>
+                                <label class="text-sm mb-2 block">성별</label>
+                                <ul class="items-center w-full text-sm font-medium sm:flex">
+                                    <li class="bg-gray-100 w-full text-sm px-2 py-1 rounded-l-md rounded-r-none outline-blue-500">
+                                        <div class="flex items-center ps-3">
+                                            <input id="gender-male" type="radio" value="male" name="gender" class="w-4 h-4 text-black-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
+                                            <label for="gender-male" class="w-full py-3 ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">남성 </label>
+                                        </div>
+                                    </li>
+                                    <li class="bg-gray-100 w-full text-sm px-4 py-1 rounded-l-none rounded-r-md outline-blue-500">
+                                        <div class="flex items-center ps-3">
+                                            <input id="gender-female" type="radio" value="female" name="gender" class="w-4 h-4 text-gray-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
+                                            <label for="gender-female" class="w-full py-3 ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">여성</label>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div>
+                                <label class="text-sm mb-2 block">생년월일</label>
+                                <input type="date" name="birthDay" id="date"
+                                       class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" />
+                            </div>
                         </div>
+
+
 
                         <div class="!mt-10">
                             <input type="submit" value="Sign up" class="signuptopmargin min-w-[150px] py-3 px-4 text-sm font-semibold tracking-wide rounded-lg text-white bg-gray-600 hover:bg-gray-700 focus:outline-none">
                         </div>
+
 
                     </form>
                 </div>
