--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -103,7 +103,7 @@
                 <div class="learnmorecenter text-left border rounded-md p-10">
                     <h3 class="text-xl font-semibold mb-2">로그아웃</h3>
                     <p class="text-gray-500 text-sm">Seamless communication for your team.</p>
-                    <button type="button" class="border px-4 py-2 rounded-md font-bold flex items-center text-sm mt-6 hover:bg-gray-50" onclick="window.location.href='/order/list'">
+                    <button type="button" class="border px-4 py-2 rounded-md font-bold flex items-center text-sm mt-6 hover:bg-gray-50" onclick="window.location.href='/users/logout'">
                         Learn more
                     </button>
                 </div>
